--- a/apps/clubbayer2/project.json
+++ b/apps/clubbayer2/project.json
@@ -15,7 +15,8 @@
     "serve": {
       "executor": "@nx/next:server",
       "options": {
-        "buildTarget": "clubbayer2:build"
+        "buildTarget": "clubbayer2:build",
+        "port": 4000
       }
     }
   }
