--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@clubbayer-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run-many --target=serve --projects=clubbayer1,clubbayer2 --parallel"
+  },
   "private": true,
   "dependencies": {
     "next": "14.2.16",
